--- a/QLPhongMachTuWPF/QLPhongMachTuWPF.csproj
+++ b/QLPhongMachTuWPF/QLPhongMachTuWPF.csproj
@@ -128,7 +128,9 @@
     <Compile Include="Model\THUOC.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\AddDiagnosis.cs" />
     <Compile Include="ViewModel\AddInvoiceVM.cs" />
+    <Compile Include="ViewModel\AddMedicineVM.cs" />
     <Compile Include="ViewModel\AddPatientVM.cs" />
     <Compile Include="ViewModel\AddStaffsVM.cs" />
     <Compile Include="ViewModel\ControlBarViewModel.cs" />
