--- a/QLPhongMachTuWPF/QLPhongMachTuWPF.csproj
+++ b/QLPhongMachTuWPF/QLPhongMachTuWPF.csproj
@@ -140,6 +140,7 @@
     <Compile Include="ViewModel\InvoiceVM.cs" />
     <Compile Include="ViewModel\ListsVM.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="ViewModel\ModifyDiagnosisVM.cs" />
     <Compile Include="ViewModel\ModifyMedicineVM.cs" />
     <Compile Include="ViewModel\ModifyPatientsVM.cs" />
     <Compile Include="ViewModel\ModifyStaffVM.cs" />
@@ -189,6 +190,15 @@
     <Compile Include="View\ManageAppointments.xaml.cs">
       <DependentUpon>ManageAppointments.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\ModifyAppointment.xaml.cs">
+      <DependentUpon>ModifyAppointment.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ModifyDiagnosis.xaml.cs">
+      <DependentUpon>ModifyDiagnosis.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ModifyInvoice.xaml.cs">
+      <DependentUpon>ModifyInvoice.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\ModifyMedicine.xaml.cs">
       <DependentUpon>ModifyMedicine.xaml</DependentUpon>
     </Compile>
@@ -217,6 +227,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="ResourceXAML\AddDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ResourceXAML\HomepageStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -285,6 +299,18 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\ManageAppointments.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ModifyAppointment.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ModifyDiagnosis.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ModifyInvoice.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
