--- a/QLPhongMachTuWPF/QLPhongMachTuWPF.csproj
+++ b/QLPhongMachTuWPF/QLPhongMachTuWPF.csproj
@@ -136,6 +136,9 @@
     <Compile Include="Model\PHIEUKHAM.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\QUIDINH.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\THUOC.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
