--- a/QLPhongMachTuWPF/packages.config
+++ b/QLPhongMachTuWPF/packages.config
@@ -1,11 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net472" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="itext" version="9.0.0" targetFramework="net472" />
+  <package id="itext.commons" version="9.0.0" targetFramework="net472" />
+  <package id="itext7" version="9.0.0" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.4" targetFramework="net472" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="MaterialDesignColors" version="3.1.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="5.1.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
